crates/carta/tests/snapshots/golden_writer__ipynb__common__definition-term-colon.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "term: with colon  \n",
    "definition"
   ],
   "id": "d25d33e3-ec25-42f5-bb17-1fe92a75a0ae"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
