crates/carta/tests/snapshots/golden_writer__ipynb__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "be careful here"
   ],
   "id": "8d81799c-c62e-4ca2-b786-7d4be37c1abc"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
