crates/carta/tests/snapshots/golden_writer__ipynb__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "body paragraph"
   ],
   "id": "6eb175c7-e136-46c3-9431-e29bf260c9ec"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
