crates/carta/tests/snapshots/golden_writer__ipynb__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "**bold** opens the line\n",
    "\n",
    "\\*literal star"
   ],
   "id": "615cf597-5a6b-4589-aafc-d051a4e7357e"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
