crates/carta/tests/snapshots/golden_writer__ipynb__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "*see [text](http://example.com) here*"
   ],
   "id": "f1899dd0-155e-4549-ad59-c9195a4604c6"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
