crates/carta/tests/snapshots/golden_writer__ipynb__common__escape-flanking.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "a \\* b \\` c \\| d and trailing_ref\\_"
   ],
   "id": "f8bdb2ed-20c9-47cd-ac02-877046932b7e"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
