crates/carta/tests/snapshots/golden_writer__ipynb__common__footnote-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "ref[1]\n",
    "\n",
    "[1] the note body"
   ],
   "id": "6b45bade-52d3-4d03-b79d-6f5af771070e"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
